deps/v8/test/message/fail/modules-import1.out
*%(basename)s:7: SyntaxError: The requested module 'modules-import1.js' does not provide an export named 'a'
import {a} from "modules-import1.js";
        ^
SyntaxError: The requested module 'modules-import1.js' does not provide an export named 'a'

